# mastermind

./: .gitignore  LICENSE  Procfile  README.md  mastermind.cabal
app/: Main.hs
client/: README.md  elm-package.json  package.json
client/src/elm/: Decoding.elm  Main.elm  Models.elm
client/src/static/: index.html  index.js
client/src/static/styles/: main.css
src/: CodeBuilder.hs  Game.hs  GameMechanics.hs  HillClimbingSolverGame.hs  HumanSolverGame.hs  Lib.hs  WebHillClimbingApi.hs
test/: Spec.hs
