name:                mastermind
version:             0.1.0.0
synopsis:            Matermind game
homepage:            https://github.com/githubuser/mastermind#readme
license:             BSD3
license-file:        LICENSE
author:              Maor Leger
maintainer:          maor.leger@gmail.com
copyright:           2016 Maor Leger
category:            Text
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     HumanSolverGame
                    ,  HillClimbingSolverGame
                    ,  CodeBuilder
                    ,  GameMechanics
                    ,  WebHillClimbingApi
  build-depends:       base >= 4.7 && < 5
                    ,  random
                    ,  aeson
  default-language:    Haskell2010

executable mastermind
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       base
                     , mastermind
                     , scotty
                     , aeson
  default-language:    Haskell2010

test-suite mastermind-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , mastermind
                     , hspec
                     , QuickCheck
                     , checkers
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/mastermind
